--- a/郊游.css
+++ b/郊游.css
@@ -7,10 +7,10 @@
     filter:opacity(0.95);
 }
 .profile{
-    background-color: #bfa;
+    /* background-color: #bfa; */
     width:150px;
     height: 230px;
-    position: absolute;
+    position: sticky;
     top: 10%;
     left: 3%;
 }
@@ -39,7 +39,7 @@
 }
 .shade{
     width: 1100px;
-    height: 1100px;
+    height: 100%;
     margin:0 auto;
     background-color: hsla(0,0%,100%,.55);
     position: relative;
@@ -77,5 +77,20 @@
     background-color: #707070;
     background-color: hsla(0,0%,100%,.55);
     filter: blur(5px) opacity(0.5);
+}
+/* 轮播 */
+.img-list{
+    width: 590px;
+    height: 470px;
+    margin: 0 auto;
+    /* 开启相对定位：使ul中的pointer相对于ul定位，而不是相对于body定位 */
+    position: relative;
+}
+.img-list li{
+    position: absolute;
+}
+.Img{
+    width: 100%;
+    position: relative;
     
 }
