--- a/郊游.css
+++ b/郊游.css
@@ -10,7 +10,7 @@
     /* background-color: #bfa; */
     width:150px;
     height: 230px;
-    position: sticky;
+    position: absolute ;
     top: 10%;
     left: 3%;
 }
@@ -39,7 +39,7 @@
 }
 .shade{
     width: 1100px;
-    height: 100%;
+    height: 1300px;
     margin:0 auto;
     background-color: hsla(0,0%,100%,.55);
     position: relative;
@@ -85,6 +85,7 @@
     margin: 0 auto;
     /* 开启相对定位：使ul中的pointer相对于ul定位，而不是相对于body定位 */
     position: relative;
+    
 }
 .img-list li{
     position: absolute;
